# clipvault

./: .gitignore  BUILD.md  CHANGELOG.adoc  CONTRIBUTING.adoc  Cargo.toml  GIT_SETUP.md  LICENSE-COMMERCIAL.adoc  README.adoc  SHIPPING.md  build.rs  config.default.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  daemon.rs  discord.rs  hotkeys.rs  main.rs  notify.rs  paste.rs  snippets.rs  store.rs  transforms.rs  tray.rs  updater.rs
src/gui/: mod.rs  overlay.rs  preview.rs  theme.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
