[package]
name        = "clipvault"
version     = "0.2.0"
edition     = "2021"
description = "Cross-platform clipboard manager daemon"
license     = "MIT"
build       = "build.rs"

[dependencies]
arboard          = "3"
rdev             = "0.5"
egui             = "0.28"
eframe           = { version = "0.28", features = ["persistence"] }
tray-icon        = "0.24"
notify-rust      = "4"
discord-presence = "3"
self_update      = { version = "0.44", features = [
    "archive-tar", "archive-zip",
    "compression-flate2", "compression-zip-deflate",
] }
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
toml             = "0.8"
fuzzy-matcher    = "0.3"
image            = { version = "0.25", features = ["webp"] }
sha2             = "0.10"
hex              = "0.4"
chrono           = { version = "0.4", features = ["serde"] }
dirs             = "5"
enigo            = "0.6"
log              = "0.4"
env_logger       = "0.11"
anyhow           = "1"
aes-gcm          = "0.10"
base64           = "0.22"
percent-encoding = "2"
regex            = "1"
semver           = "1"
uuid             = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification   = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
